<resources>
  <string name="app_name">Miracle DMI</string>
  <string name="loading">Memuat</string>
  <string name="logo">Logo</string>
  <string name="Version">Version</string>
  <string name="username">Username</string>
  <string name="password">Password</string>
  <string name="login">Login</string>
  <string name="copy">Salinan</string>
  <string name="wallet">Wallet</string>
  <string name="balance">Balance</string>
  <string name="activate_chart">Aktifkan Grafik saat Trading</string>
  <string name="activate_progress_bar">Aktifkan Progress Bar saat Trading</string>
  <string name="warning_chart">Beberapa android tidak mendukung menjalankan Chart atau progress bar. Chart atau progress bar tidak stabil saat digunakan di Android nougat dan di bawahnya</string>
  <string name="welcome">Selamat Datang di Robot Miracle DMI Doge:</string>
  <string name="welcome_description">Robot ini dapat menghasilkan laba minimal 3% untuk Anda dan minimal 1% untuk sponsor Anda. Tapi robot Miracle DMI juga bisa kalah. Jika robot tidak menghasilkan doge keuntungan, maka sistem Miracle DMI akan secara otomatis menggantinya dengan dompet DMI yang dapat Anda jual atau gunakan untuk peningkatan.</string>
  <string name="withdraw_description">Anda memasukkan terlalu banyak deposit doge, harap tarik semua dan masukkan dengan nominal yang benar, atau tingkatkan keanggotaan Miracle DMI Anda</string>
  <string name="withdraw">Tarik Semua</string>
  <string name="play">Mainkan Robot</string>
  <string name="error">Error 404</string>
  <string name="logout">Keluar</string>
  <string name="minimum_deposit">Setoran Minimum</string>
  <string name="example_doge">10000.000000000 DOGE</string>
  <string name="maximum_deposit">Setoran Maximum</string>
</resources>
