<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.HomeActivity">

  <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <LinearLayout
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <TextView
          android:padding="10dp"
          android:background="@drawable/edit_text_3"
          android:textColor="@color/textPrimary"
          android:gravity="center"
          android:hint="@string/wallet"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:id="@+id/textViewWallet"/>

      <Button
          android:textColor="@color/textSecondary"
          android:background="@drawable/button_default_2"
          android:text="@string/copy"
          android:layout_width="50dp"
          android:layout_height="wrap_content"
          android:id="@+id/buttonCopy"
          android:layout_weight="0.1"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp"/>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:background="@drawable/edit_text_2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <TextView
          android:text="@string/username"
          android:textColor="@color/textPrimary"
          android:gravity="start"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="0.1"/>

      <TextView
          android:hint="@string/username"
          android:textColor="@color/textPrimary"
          android:gravity="end"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/textViewUsername"
          android:layout_weight="1"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp"/>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:background="@drawable/edit_text_2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <TextView
          android:text="@string/balance"
          android:textColor="@color/textPrimary"
          android:gravity="start"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="0.1"/>

      <TextView
          android:hint="@string/balance"
          android:textColor="@color/textPrimary"
          android:gravity="end"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/textViewBalance"
          android:layout_weight="1"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp"/>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="10dp"
        android:background="@drawable/card_default"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <Switch
          android:text="@string/activate_chart"
          android:textColor="@color/textPrimary"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/switchActiveChart"/>

      <Space
          android:layout_width="match_parent"
          android:layout_height="5dp"/>

      <Switch
          android:text="@string/activate_progress_bar"
          android:textColor="@color/textPrimary"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/switchActiveProgressBar"/>

      <Space
          android:layout_width="match_parent"
          android:layout_height="10dp"/>

      <View
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="?attr/colorAccent"/>

      <Space
          android:layout_width="match_parent"
          android:layout_height="10dp"/>

      <TextView
          android:text="@string/warning_chart"
          android:textColor="@color/textPrimary"
          android:textStyle="bold"
          android:textSize="12sp"
          android:gravity="center"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/textView"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp"/>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="10dp"
        android:background="@drawable/card_default"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <TextView
          android:text="@string/welcome"
          android:textColor="@color/textPrimary"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>

      <Space
          android:layout_width="match_parent"
          android:layout_height="5dp"/>

      <View
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="?attr/colorAccent"/>

      <Space
          android:layout_width="match_parent"
          android:layout_height="5dp"/>

      <TextView
          android:text="@string/welcomeDescription"
          android:textColor="@color/textPrimary"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

  </LinearLayout>

</ScrollView>