<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.bot.BotProgressBarGoneActivity">

  <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:background="@drawable/edit_text_2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <TextView
          android:text="@string/balance"
          android:textColor="@color/textPrimary"
          android:gravity="start"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="0.1"/>

      <TextView
          android:hint="@string/balance"
          android:textColor="@color/textPrimary"
          android:gravity="end"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/textViewBalance"
          android:layout_weight="1"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp"/>

    <TextView
        android:layout_marginEnd="50dp"
        android:id="@+id/textViewRemainingBalance"
        android:textColor="@color/textSecondary"
        android:background="@drawable/button_default_2"
        android:text="@string/balance"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="35dp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <org.eazegraph.lib.charts.ValueLineChart
        android:id="@+id/cubicLineChart"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:egUseCubic="true"
        app:egUseOverlapFill="true"
        app:egCurveSmoothness="0.4"
        app:egLegendHeight="40dp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="10dp"
        android:background="@drawable/card_default"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <TextView
          android:text="@string/welcome"
          android:textColor="@color/textPrimary"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>

      <Space
          android:layout_width="match_parent"
          android:layout_height="5dp"/>

      <View
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="?attr/colorAccent"/>

      <Space
          android:layout_width="match_parent"
          android:layout_height="5dp"/>

      <TextView
          android:text="@string/welcome_description"
          android:textColor="@color/textPrimary"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>

    </LinearLayout>

  </LinearLayout>

</ScrollView>